#292680 Make sure themes don't add padding to navigation h3 causing misalignment, patch by MattA.

--- a/date.css
+++ b/date.css
@@ -108,6 +108,10 @@ span.date-display-separator {
   width:50%;
   float:left;
 }
+.date-nav div.date-heading h3 {
+  margin:0;
+  padding:0;
+}
 
 .date-clear {
   clear:both;
